# THU-Computer-Graphics-2020

./: .gitignore  README.md
PA0/code/: CMakeLists.txt  run_all.sh
PA0/code/include/: canvas_parser.hpp  element.hpp  image.hpp
PA0/code/src/: canvas_parser.cpp  main.cpp
PA0/code/testcases/: canvas01_basic.txt  canvas02_emoji.txt
PA1/: 习题课1.pptx
PA1/code/: CMakeLists.txt
PA1/code/include/: camera.hpp  group.hpp  hit.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp
PA1/code/src/: main.cpp  mesh.cpp  scene_parser.cpp
PA1/code/testcases/: scene01_basic.txt  scene02_cube.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt
PA1/student-code/: CMakeLists.txt  compile.sh  repoer.md  run_all.sh  template.latex
PA1/student-code/include/: camera.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp
PA1/student-code/src/: image.cpp  main.cpp  scene_parser.cpp
PA1/student-code/testcases/: scene01_basic.txt  scene02_cube.txt  scene03_sphere.txt  scene04_axes.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  scene07_shine.txt
PA2/code/: CMakeLists.txt  run_all.sh
PA2/code/include/: camera.hpp  material.hpp  object3d.hpp  plane.hpp  ray.hpp  sphere.hpp  transform.hpp  triangle.hpp
PA2/code/src/: camera_controller.cpp  main.cpp  scene_parser.cpp
PA2/code/testcases/: scene04_axes.txt
PA2/code_/include/: camera_controller.hpp  group.hpp  material.hpp  mesh.hpp  plane.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp
PA2/code_/src/: main.cpp
PA2/code_/testcases/: scene01_basic.txt  scene03_sphere.txt  scene07_shine.txt
PA3/: .~习题课2.pptx  ~$习题课2.pptx
PA3/PA3.BezierSurface/code/: CMakeLists.txt  distribute.sh  run_all.sh
PA3/PA3.BezierSurface/code/include/: curve.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  mesh.hpp  object3d.hpp  revsurface.hpp  scene_parser.hpp
PA3/PA3.BezierSurface/code/src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp
PA3/PA3.BezierSurface/code/testcases/: scene06_bunny_1k.txt  scene08_core.txt  scene09_norm.txt  scene10_wineglass.txt
PA3/PA3.BezierSurface/ref/: basis.py
PA4/: test.py
project/: README.md
project/final/: CMakeLists.txt  run_dispersion.sh  run_ptrc.sh  run_sppm.sh  test.sh
project/final/include/: bound.hpp  camera.hpp  constants.h  curve.hpp  group.hpp  hit.hpp  hit_kdtree.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  obj_loader.h  object3d.hpp  object_kdtree.hpp  plane.hpp  ray.hpp  render.hpp  revsurface.hpp  scene.hpp  sphere.hpp  texture.h  transform.hpp  triangle.hpp  utils.hpp
project/final/mesh/: transform.py
project/final/output/: sctime
project/final/src/: main.cpp  mergeRGB.py  scene.cpp  texture.cpp
project/final/testcases/: scene01_basic.txt  scene02_cube.txt  scene03_sphere.txt  scene04_axes.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  scene06_bunny_1k_vn.txt  scene07_shine.txt  scene09_norm.txt  scene10_wineglass.json  scene10_wineglass.txt  scene10_wineglass_720p.txt  scene11_smallpt.txt  scene12.txt  scene12_720p.txt  scene13.txt  scene14.txt  scene15_bunny_200.txt  scene16_global.txt  scene16_global_diff.txt  scene17_bump.txt  scene18_dof.txt  scene18_dof_0.txt  scene19_sibenik.txt  scene20_diamond.txt  scene20_diamond_b.txt  scene20_diamond_g.txt  scene20_diamond_r.txt  scene21_livingroom.py  scene21_livingroom.txt  scene_sample.json
project/final_cuda/: Makefile  bound.h  camera.h  cuPrintf.cu  cuPrintf.cuh  curve.h  final  hit.h  main.cu  material.h  object.h  object_list.h  plane.h  ppmconverter.py  ray.h  render.h  revsurface.h  run.sh  scene.cu  scene.h  sphere.h  stb_image.h  texture.h  triangle.h  vec3.h
project/final_cuda/hide/: mesh.cu  mesh.h  texture.cu
project/final_cuda/testcases/: sample.txt
project/obj小工具/: FileUtil.java  ObjSplit.java
